# MulleFoundation-startup

./: .gitignore  .touch  .travis.yml  CMakeLists.txt  LICENSE  MulleFoundation-startup.sublime-project  README.md  RELEASENOTES.md  clib.json  package.json
.github/workflows/: semgrep.yml
.mulle-env/share/: environment-project.sh  tool
.mulle-sourcetree/etc/: config
.mulle/etc/env/: environment-global.sh  environment-host-ci-prerelease.sh  environment-host-travis-ci-prerelease.sh  environment-project.sh
.mulle/etc/project/: version-info.sh
.mulle/etc/sourcetree/: config
.mulle/share/sourcetree/: config
cmake/: DependenciesAndLibraries.cmake  Headers.cmake  _Dependencies.cmake  _Headers.cmake  _Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Sources.cmake
cmake/share/: CreateLoaderIncObjC.cmake  DefineLoaderIncObjC.cmake  Environment.cmake  ExecutableObjC.cmake  OptimizedLinkObjC.cmake  StandaloneC.cmake  StartupC.cmake
cola/: description.md.bud  info.md.bud  properties.plist
mulle-project/: version-info.sh
src/: MulleFoundation-startup.m  import-private.h  import.h  mulle-foundation-startup.m
